crates/swc_css_parser/tests/errors/rome/invalid/min-or-max/output.stderr
error: Expected 'number', 'dimension', 'percentage', 'ident', '(' or 'function' tokens
 --> $DIR/tests/errors/rome/invalid/min-or-max/input.css:2:18
  |
2 |     width: min(500px;
  |                     ^

error: Expected 'number', 'dimension', 'percentage', 'ident', '(' or 'function' tokens
 --> $DIR/tests/errors/rome/invalid/min-or-max/input.css:3:1
  |
3 | }
  | ^

error: Unexpected end of file
 --> $DIR/tests/errors/rome/invalid/min-or-max/input.css:3:3
  |
3 | }
  |   ^

error: Unexpected end of file

